compilateur/y.output
Terminals unused in grammar

    tAND
    tOR
    tRET
    tVOID


Grammar

    0 $accept: Compilateur $end

    1 Compilateur: Main

    2 Main: tMAIN tPO tPF tAO CorpsProgramme tAF

    3 CorpsProgramme: Instruction CorpsProgramme
    4               | Instruction

    5 Instruction: Constante
    6            | Variable
    7            | Affectation
    8            | If
    9            | While
   10            | Print

   11 Constante: tCONST tNOM tAFFECT tENTIER tPV

   12 Variable: tINT tNOM tAFFECT Expression tPV
   13         | tINT tNOM tVIR DeclarationVariable
   14         | tINT tNOM tPV

   15 DeclarationVariable: tNOM tPV
   16                    | tNOM tVIR DeclarationVariable

   17 Affectation: tNOM tAFFECT Expression tPV

   18 Expression: tPO Expression tADD Expression tPF
   19           | tPO Expression tSOU Expression tPF
   20           | tPO Expression tMUL Expression tPF
   21           | tPO Expression tDIV Expression tPF
   22           | Expression tADD Expression
   23           | Expression tSOU Expression
   24           | Expression tMUL Expression
   25           | Expression tDIV Expression
   26           | Operande

   27 Operande: tENTIER
   28         | tNOM

   29 $@1: %empty

   30 If: tIF tPO Condition tPF tAO $@1 CorpsProgramme tAF

   31 $@2: %empty

   32 If: If tELSE tAO CorpsProgramme $@2 tAF
   33   | If tELSE If

   34 $@3: %empty

   35 While: tWHI tPO Condition tPF tAO $@3 CorpsProgramme tAF

   36 Print: tPRINT tPO tNOM tPF tPV

   37 Condition: tENTIER
   38          | Operande tEGAL Operande
   39          | Operande tINF Operande
   40          | Operande tSUP Operande


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    tMAIN (258) 2
    tPO (259) 2 18 19 20 21 30 35 36
    tPF (260) 2 18 19 20 21 30 35 36
    tAO (261) 2 30 32 35
    tAF (262) 2 30 32 35
    tPV (263) 11 12 14 15 17 36
    tVIR (264) 13 16
    tELSE (265) 32 33
    tAND (266)
    tOR (267)
    tINT (268) 12 13 14
    tCONST (269) 11
    tEGAL (270) 38
    tINF (271) 39
    tSUP (272) 40
    tAFFECT (273) 11 12 17
    tSOU (274) 19 23
    tADD (275) 18 22
    tMUL (276) 20 24
    tDIV (277) 21 25
    tPRINT (278) 36
    tRET (279)
    tVOID (280)
    tENTIER <entier> (281) 11 27 37
    tNOM <var> (282) 11 12 13 14 15 16 17 28 36
    tIF <entier> (283) 30
    tWHI <val> (284) 35


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    Compilateur (31)
        on left: 1
        on right: 0
    Main (32)
        on left: 2
        on right: 1
    CorpsProgramme <entier> (33)
        on left: 3 4
        on right: 2 3 30 32 35
    Instruction (34)
        on left: 5 6 7 8 9 10
        on right: 3 4
    Constante (35)
        on left: 11
        on right: 5
    Variable (36)
        on left: 12 13 14
        on right: 6
    DeclarationVariable (37)
        on left: 15 16
        on right: 13 16
    Affectation (38)
        on left: 17
        on right: 7
    Expression <entier> (39)
        on left: 18 19 20 21 22 23 24 25 26
        on right: 12 17 18 19 20 21 22 23 24 25
    Operande <entier> (40)
        on left: 27 28
        on right: 26 38 39 40
    If <entier> (41)
        on left: 30 32 33
        on right: 8 32 33
    $@1 (42)
        on left: 29
        on right: 30
    $@2 (43)
        on left: 31
        on right: 32
    While <entier> (44)
        on left: 35
        on right: 9
    $@3 (45)
        on left: 34
        on right: 35
    Print (46)
        on left: 36
        on right: 10
    Condition <entier> (47)
        on left: 37 38 39 40
        on right: 30 35


State 0

    0 $accept: . Compilateur $end

    tMAIN  shift, and go to state 1

    Compilateur  go to state 2
    Main         go to state 3


State 1

    2 Main: tMAIN . tPO tPF tAO CorpsProgramme tAF

    tPO  shift, and go to state 4


State 2

    0 $accept: Compilateur . $end

    $end  shift, and go to state 5


State 3

    1 Compilateur: Main .

    $default  reduce using rule 1 (Compilateur)


State 4

    2 Main: tMAIN tPO . tPF tAO CorpsProgramme tAF

    tPF  shift, and go to state 6


State 5

    0 $accept: Compilateur $end .

    $default  accept


State 6

    2 Main: tMAIN tPO tPF . tAO CorpsProgramme tAF

    tAO  shift, and go to state 7


State 7

    2 Main: tMAIN tPO tPF tAO . CorpsProgramme tAF

    tINT    shift, and go to state 8
    tCONST  shift, and go to state 9
    tPRINT  shift, and go to state 10
    tNOM    shift, and go to state 11
    tIF     shift, and go to state 12
    tWHI    shift, and go to state 13

    CorpsProgramme  go to state 14
    Instruction     go to state 15
    Constante       go to state 16
    Variable        go to state 17
    Affectation     go to state 18
    If              go to state 19
    While           go to state 20
    Print           go to state 21


State 8

   12 Variable: tINT . tNOM tAFFECT Expression tPV
   13         | tINT . tNOM tVIR DeclarationVariable
   14         | tINT . tNOM tPV

    tNOM  shift, and go to state 22


State 9

   11 Constante: tCONST . tNOM tAFFECT tENTIER tPV

    tNOM  shift, and go to state 23


State 10

   36 Print: tPRINT . tPO tNOM tPF tPV

    tPO  shift, and go to state 24


State 11

   17 Affectation: tNOM . tAFFECT Expression tPV

    tAFFECT  shift, and go to state 25


State 12

   30 If: tIF . tPO Condition tPF tAO $@1 CorpsProgramme tAF

    tPO  shift, and go to state 26


State 13

   35 While: tWHI . tPO Condition tPF tAO $@3 CorpsProgramme tAF

    tPO  shift, and go to state 27


State 14

    2 Main: tMAIN tPO tPF tAO CorpsProgramme . tAF

    tAF  shift, and go to state 28


State 15

    3 CorpsProgramme: Instruction . CorpsProgramme
    4               | Instruction .

    tINT    shift, and go to state 8
    tCONST  shift, and go to state 9
    tPRINT  shift, and go to state 10
    tNOM    shift, and go to state 11
    tIF     shift, and go to state 12
    tWHI    shift, and go to state 13

    $default  reduce using rule 4 (CorpsProgramme)

    CorpsProgramme  go to state 29
    Instruction     go to state 15
    Constante       go to state 16
    Variable        go to state 17
    Affectation     go to state 18
    If              go to state 19
    While           go to state 20
    Print           go to state 21


State 16

    5 Instruction: Constante .

    $default  reduce using rule 5 (Instruction)


State 17

    6 Instruction: Variable .

    $default  reduce using rule 6 (Instruction)


State 18

    7 Instruction: Affectation .

    $default  reduce using rule 7 (Instruction)


State 19

    8 Instruction: If .
   32 If: If . tELSE tAO CorpsProgramme $@2 tAF
   33   | If . tELSE If

    tELSE  shift, and go to state 30

    $default  reduce using rule 8 (Instruction)


State 20

    9 Instruction: While .

    $default  reduce using rule 9 (Instruction)


State 21

   10 Instruction: Print .

    $default  reduce using rule 10 (Instruction)


State 22

   12 Variable: tINT tNOM . tAFFECT Expression tPV
   13         | tINT tNOM . tVIR DeclarationVariable
   14         | tINT tNOM . tPV

    tPV      shift, and go to state 31
    tVIR     shift, and go to state 32
    tAFFECT  shift, and go to state 33


State 23

   11 Constante: tCONST tNOM . tAFFECT tENTIER tPV

    tAFFECT  shift, and go to state 34


State 24

   36 Print: tPRINT tPO . tNOM tPF tPV

    tNOM  shift, and go to state 35


State 25

   17 Affectation: tNOM tAFFECT . Expression tPV

    tPO      shift, and go to state 36
    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Expression  go to state 39
    Operande    go to state 40


State 26

   30 If: tIF tPO . Condition tPF tAO $@1 CorpsProgramme tAF

    tENTIER  shift, and go to state 41
    tNOM     shift, and go to state 38

    Operande   go to state 42
    Condition  go to state 43


State 27

   35 While: tWHI tPO . Condition tPF tAO $@3 CorpsProgramme tAF

    tENTIER  shift, and go to state 41
    tNOM     shift, and go to state 38

    Operande   go to state 42
    Condition  go to state 44


State 28

    2 Main: tMAIN tPO tPF tAO CorpsProgramme tAF .

    $default  reduce using rule 2 (Main)


State 29

    3 CorpsProgramme: Instruction CorpsProgramme .

    $default  reduce using rule 3 (CorpsProgramme)


State 30

   32 If: If tELSE . tAO CorpsProgramme $@2 tAF
   33   | If tELSE . If

    tAO  shift, and go to state 45
    tIF  shift, and go to state 12

    If  go to state 46


State 31

   14 Variable: tINT tNOM tPV .

    $default  reduce using rule 14 (Variable)


State 32

   13 Variable: tINT tNOM tVIR . DeclarationVariable

    tNOM  shift, and go to state 47

    DeclarationVariable  go to state 48


State 33

   12 Variable: tINT tNOM tAFFECT . Expression tPV

    tPO      shift, and go to state 36
    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Expression  go to state 49
    Operande    go to state 40


State 34

   11 Constante: tCONST tNOM tAFFECT . tENTIER tPV

    tENTIER  shift, and go to state 50


State 35

   36 Print: tPRINT tPO tNOM . tPF tPV

    tPF  shift, and go to state 51


State 36

   18 Expression: tPO . Expression tADD Expression tPF
   19           | tPO . Expression tSOU Expression tPF
   20           | tPO . Expression tMUL Expression tPF
   21           | tPO . Expression tDIV Expression tPF

    tPO      shift, and go to state 36
    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Expression  go to state 52
    Operande    go to state 40


State 37

   27 Operande: tENTIER .

    $default  reduce using rule 27 (Operande)


State 38

   28 Operande: tNOM .

    $default  reduce using rule 28 (Operande)


State 39

   17 Affectation: tNOM tAFFECT Expression . tPV
   22 Expression: Expression . tADD Expression
   23           | Expression . tSOU Expression
   24           | Expression . tMUL Expression
   25           | Expression . tDIV Expression

    tPV   shift, and go to state 53
    tSOU  shift, and go to state 54
    tADD  shift, and go to state 55
    tMUL  shift, and go to state 56
    tDIV  shift, and go to state 57


State 40

   26 Expression: Operande .

    $default  reduce using rule 26 (Expression)


State 41

   27 Operande: tENTIER .
   37 Condition: tENTIER .

    tPF       reduce using rule 37 (Condition)
    $default  reduce using rule 27 (Operande)


State 42

   38 Condition: Operande . tEGAL Operande
   39          | Operande . tINF Operande
   40          | Operande . tSUP Operande

    tEGAL  shift, and go to state 58
    tINF   shift, and go to state 59
    tSUP   shift, and go to state 60


State 43

   30 If: tIF tPO Condition . tPF tAO $@1 CorpsProgramme tAF

    tPF  shift, and go to state 61


State 44

   35 While: tWHI tPO Condition . tPF tAO $@3 CorpsProgramme tAF

    tPF  shift, and go to state 62


State 45

   32 If: If tELSE tAO . CorpsProgramme $@2 tAF

    tINT    shift, and go to state 8
    tCONST  shift, and go to state 9
    tPRINT  shift, and go to state 10
    tNOM    shift, and go to state 11
    tIF     shift, and go to state 12
    tWHI    shift, and go to state 13

    CorpsProgramme  go to state 63
    Instruction     go to state 15
    Constante       go to state 16
    Variable        go to state 17
    Affectation     go to state 18
    If              go to state 19
    While           go to state 20
    Print           go to state 21


State 46

   32 If: If . tELSE tAO CorpsProgramme $@2 tAF
   33   | If . tELSE If
   33   | If tELSE If .

    tELSE  error (nonassociative)

    $default  reduce using rule 33 (If)


State 47

   15 DeclarationVariable: tNOM . tPV
   16                    | tNOM . tVIR DeclarationVariable

    tPV   shift, and go to state 64
    tVIR  shift, and go to state 65


State 48

   13 Variable: tINT tNOM tVIR DeclarationVariable .

    $default  reduce using rule 13 (Variable)


State 49

   12 Variable: tINT tNOM tAFFECT Expression . tPV
   22 Expression: Expression . tADD Expression
   23           | Expression . tSOU Expression
   24           | Expression . tMUL Expression
   25           | Expression . tDIV Expression

    tPV   shift, and go to state 66
    tSOU  shift, and go to state 54
    tADD  shift, and go to state 55
    tMUL  shift, and go to state 56
    tDIV  shift, and go to state 57


State 50

   11 Constante: tCONST tNOM tAFFECT tENTIER . tPV

    tPV  shift, and go to state 67


State 51

   36 Print: tPRINT tPO tNOM tPF . tPV

    tPV  shift, and go to state 68


State 52

   18 Expression: tPO Expression . tADD Expression tPF
   19           | tPO Expression . tSOU Expression tPF
   20           | tPO Expression . tMUL Expression tPF
   21           | tPO Expression . tDIV Expression tPF
   22           | Expression . tADD Expression
   23           | Expression . tSOU Expression
   24           | Expression . tMUL Expression
   25           | Expression . tDIV Expression

    tSOU  shift, and go to state 69
    tADD  shift, and go to state 70
    tMUL  shift, and go to state 71
    tDIV  shift, and go to state 72


State 53

   17 Affectation: tNOM tAFFECT Expression tPV .

    $default  reduce using rule 17 (Affectation)


State 54

   23 Expression: Expression tSOU . Expression

    tPO      shift, and go to state 36
    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Expression  go to state 73
    Operande    go to state 40


State 55

   22 Expression: Expression tADD . Expression

    tPO      shift, and go to state 36
    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Expression  go to state 74
    Operande    go to state 40


State 56

   24 Expression: Expression tMUL . Expression

    tPO      shift, and go to state 36
    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Expression  go to state 75
    Operande    go to state 40


State 57

   25 Expression: Expression tDIV . Expression

    tPO      shift, and go to state 36
    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Expression  go to state 76
    Operande    go to state 40


State 58

   38 Condition: Operande tEGAL . Operande

    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Operande  go to state 77


State 59

   39 Condition: Operande tINF . Operande

    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Operande  go to state 78


State 60

   40 Condition: Operande tSUP . Operande

    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Operande  go to state 79


State 61

   30 If: tIF tPO Condition tPF . tAO $@1 CorpsProgramme tAF

    tAO  shift, and go to state 80


State 62

   35 While: tWHI tPO Condition tPF . tAO $@3 CorpsProgramme tAF

    tAO  shift, and go to state 81


State 63

   32 If: If tELSE tAO CorpsProgramme . $@2 tAF

    $default  reduce using rule 31 ($@2)

    $@2  go to state 82


State 64

   15 DeclarationVariable: tNOM tPV .

    $default  reduce using rule 15 (DeclarationVariable)


State 65

   16 DeclarationVariable: tNOM tVIR . DeclarationVariable

    tNOM  shift, and go to state 47

    DeclarationVariable  go to state 83


State 66

   12 Variable: tINT tNOM tAFFECT Expression tPV .

    $default  reduce using rule 12 (Variable)


State 67

   11 Constante: tCONST tNOM tAFFECT tENTIER tPV .

    $default  reduce using rule 11 (Constante)


State 68

   36 Print: tPRINT tPO tNOM tPF tPV .

    $default  reduce using rule 36 (Print)


State 69

   19 Expression: tPO Expression tSOU . Expression tPF
   23           | Expression tSOU . Expression

    tPO      shift, and go to state 36
    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Expression  go to state 84
    Operande    go to state 40


State 70

   18 Expression: tPO Expression tADD . Expression tPF
   22           | Expression tADD . Expression

    tPO      shift, and go to state 36
    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Expression  go to state 85
    Operande    go to state 40


State 71

   20 Expression: tPO Expression tMUL . Expression tPF
   24           | Expression tMUL . Expression

    tPO      shift, and go to state 36
    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Expression  go to state 86
    Operande    go to state 40


State 72

   21 Expression: tPO Expression tDIV . Expression tPF
   25           | Expression tDIV . Expression

    tPO      shift, and go to state 36
    tENTIER  shift, and go to state 37
    tNOM     shift, and go to state 38

    Expression  go to state 87
    Operande    go to state 40


State 73

   22 Expression: Expression . tADD Expression
   23           | Expression . tSOU Expression
   23           | Expression tSOU Expression .
   24           | Expression . tMUL Expression
   25           | Expression . tDIV Expression

    tMUL  shift, and go to state 56
    tDIV  shift, and go to state 57

    $default  reduce using rule 23 (Expression)


State 74

   22 Expression: Expression . tADD Expression
   22           | Expression tADD Expression .
   23           | Expression . tSOU Expression
   24           | Expression . tMUL Expression
   25           | Expression . tDIV Expression

    tMUL  shift, and go to state 56
    tDIV  shift, and go to state 57

    $default  reduce using rule 22 (Expression)


State 75

   22 Expression: Expression . tADD Expression
   23           | Expression . tSOU Expression
   24           | Expression . tMUL Expression
   24           | Expression tMUL Expression .
   25           | Expression . tDIV Expression

    $default  reduce using rule 24 (Expression)


State 76

   22 Expression: Expression . tADD Expression
   23           | Expression . tSOU Expression
   24           | Expression . tMUL Expression
   25           | Expression . tDIV Expression
   25           | Expression tDIV Expression .

    $default  reduce using rule 25 (Expression)


State 77

   38 Condition: Operande tEGAL Operande .

    $default  reduce using rule 38 (Condition)


State 78

   39 Condition: Operande tINF Operande .

    $default  reduce using rule 39 (Condition)


State 79

   40 Condition: Operande tSUP Operande .

    $default  reduce using rule 40 (Condition)


State 80

   30 If: tIF tPO Condition tPF tAO . $@1 CorpsProgramme tAF

    $default  reduce using rule 29 ($@1)

    $@1  go to state 88


State 81

   35 While: tWHI tPO Condition tPF tAO . $@3 CorpsProgramme tAF

    $default  reduce using rule 34 ($@3)

    $@3  go to state 89


State 82

   32 If: If tELSE tAO CorpsProgramme $@2 . tAF

    tAF  shift, and go to state 90


State 83

   16 DeclarationVariable: tNOM tVIR DeclarationVariable .

    $default  reduce using rule 16 (DeclarationVariable)


State 84

   19 Expression: tPO Expression tSOU Expression . tPF
   22           | Expression . tADD Expression
   23           | Expression . tSOU Expression
   23           | Expression tSOU Expression .
   24           | Expression . tMUL Expression
   25           | Expression . tDIV Expression

    tPF   shift, and go to state 91
    tMUL  shift, and go to state 56
    tDIV  shift, and go to state 57

    $default  reduce using rule 23 (Expression)


State 85

   18 Expression: tPO Expression tADD Expression . tPF
   22           | Expression . tADD Expression
   22           | Expression tADD Expression .
   23           | Expression . tSOU Expression
   24           | Expression . tMUL Expression
   25           | Expression . tDIV Expression

    tPF   shift, and go to state 92
    tMUL  shift, and go to state 56
    tDIV  shift, and go to state 57

    $default  reduce using rule 22 (Expression)


State 86

   20 Expression: tPO Expression tMUL Expression . tPF
   22           | Expression . tADD Expression
   23           | Expression . tSOU Expression
   24           | Expression . tMUL Expression
   24           | Expression tMUL Expression .
   25           | Expression . tDIV Expression

    tPF  shift, and go to state 93

    $default  reduce using rule 24 (Expression)


State 87

   21 Expression: tPO Expression tDIV Expression . tPF
   22           | Expression . tADD Expression
   23           | Expression . tSOU Expression
   24           | Expression . tMUL Expression
   25           | Expression . tDIV Expression
   25           | Expression tDIV Expression .

    tPF  shift, and go to state 94

    $default  reduce using rule 25 (Expression)


State 88

   30 If: tIF tPO Condition tPF tAO $@1 . CorpsProgramme tAF

    tINT    shift, and go to state 8
    tCONST  shift, and go to state 9
    tPRINT  shift, and go to state 10
    tNOM    shift, and go to state 11
    tIF     shift, and go to state 12
    tWHI    shift, and go to state 13

    CorpsProgramme  go to state 95
    Instruction     go to state 15
    Constante       go to state 16
    Variable        go to state 17
    Affectation     go to state 18
    If              go to state 19
    While           go to state 20
    Print           go to state 21


State 89

   35 While: tWHI tPO Condition tPF tAO $@3 . CorpsProgramme tAF

    tINT    shift, and go to state 8
    tCONST  shift, and go to state 9
    tPRINT  shift, and go to state 10
    tNOM    shift, and go to state 11
    tIF     shift, and go to state 12
    tWHI    shift, and go to state 13

    CorpsProgramme  go to state 96
    Instruction     go to state 15
    Constante       go to state 16
    Variable        go to state 17
    Affectation     go to state 18
    If              go to state 19
    While           go to state 20
    Print           go to state 21


State 90

   32 If: If tELSE tAO CorpsProgramme $@2 tAF .

    $default  reduce using rule 32 (If)


State 91

   19 Expression: tPO Expression tSOU Expression tPF .

    $default  reduce using rule 19 (Expression)


State 92

   18 Expression: tPO Expression tADD Expression tPF .

    $default  reduce using rule 18 (Expression)


State 93

   20 Expression: tPO Expression tMUL Expression tPF .

    $default  reduce using rule 20 (Expression)


State 94

   21 Expression: tPO Expression tDIV Expression tPF .

    $default  reduce using rule 21 (Expression)


State 95

   30 If: tIF tPO Condition tPF tAO $@1 CorpsProgramme . tAF

    tAF  shift, and go to state 97


State 96

   35 While: tWHI tPO Condition tPF tAO $@3 CorpsProgramme . tAF

    tAF  shift, and go to state 98


State 97

   30 If: tIF tPO Condition tPF tAO $@1 CorpsProgramme tAF .

    $default  reduce using rule 30 (If)


State 98

   35 While: tWHI tPO Condition tPF tAO $@3 CorpsProgramme tAF .

    $default  reduce using rule 35 (While)
